[package]
name = "hilbert_wasm"
license = "MIT"
version = "0.2.0"
authors = ["paulchernoch <paul.chernoch@yahoo.com>"]
edition = "2021"
description = "Fork of Paul Cernoch's Hilbert curve rust implementation, modified to support wasm bindings"
readme = "README.md"
keywords = ["Hilbert", "fractal", "curve", "Skilling"]
categories = ["algorithms"]
repository = "https://github.com/martintricaud/hilbert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num = "0.4"
criterion = "0.3"
rand = "0.8"
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
getrandom = { version = "0.2", features = ["js"] }

[[bench]]
name = "transform_benchmarks"
harness = false

[[bench]]
name = "stopping"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
